2017-09-01  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: focus_gtk_window(win, time) is not called if
	  ev.type is ButtonRelease.

	* wayland/ui_window.c: win->x and win->y are set to -1 in ui_window_unmap()
	  to show scrollbars correctly on autohide scrollbar mode.

	* vte_wayland.c:
	  - wl_surface_set_user_data(wl_surface, GdkWindow) is called in
	    show_root() in order to make gdk to process events on mlterm surface
	    as those on GdkWindow.
	  - GdkCursor is set by gdk_window_set_cursor().

2017-08-28  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_ssh.c, vt_pty_pipewin32.c, im_iiimf.c:
	  Not only "USER" but also "LOGNAME" environmental variable is used.
	  ("USER" is not set on Solaris 11)

2017-08-27  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_ssh.c: Data in vt_pty_ssh_t is kept after reconnection.

2017-08-26  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - vte_terminal_search_set_regex() and vte_terminal_search_get_regex() are
	    implemented.
	  - 'GRegex* gregex' is added to VteRegex.
	  - ui_screen_t::ui_sel_event_listener_t::select_in_window is overridden
	    and overriding function calls g_signal_emit("selection-changed").
	  - deadline_ignoring_source_cancelled_event defined in wayland/ui_display.c
	    is set to prevent ui_display_clear_selection() from being called by
	    gtk_clipboard_set_text().

	* ui_layout.c:
	  - ui_screen_t::window::window_focused and
	    ui_screen_t::xterm_listener::set_{window|icon}_name are overridden to
	    show window title correctly in splitted screen.
	  - If ui_screen_t or ui_scrollbar_t with a wall picture is moved but not
	    resized in reset_layout() and MANAGE_SUB_WINDOWS_BY_MYSELF is not
	    defined, ui_window_update_all() is called to redraw a wall picture.
	  - HAS_MULTI_CHILDREN macro is added.

	* ui_screen.c:
	  - ui_window_utf_selection_request() is called if
	    ui_window_xct_selection_request() fails in yank_event_received().